builder/tests/08-unrecognized-attribute.stderr
error: missing or invalid `each` parameter in builder
   |
19 | #[derive(Builder)]
   |          ^^^^^^^
